# PropChain-contract

./: CI_CD_FINAL_REPORT.md  Cargo.toml  Dockerfile.indexer  FINAL_CI_CD_STATUS.txt  RUN_CI_TESTS_SUMMARY.md  WORKFLOW_EXECUTION_COMPLETE.md  cargo_deny_output.txt  clippy_output.txt  cobertura.xml  deny-new.toml  deny.toml  docker-compose.yml  test_lib_output.txt  test_output_governance.txt  test_output_staking.txt
.github/workflows/: ci.yml  performance.yml  release.yml  test-coverage.yml
contracts/bridge/src/: errors.rs  lib.rs
contracts/compliance_registry/: lib.rs
contracts/database/src/: lib.rs
contracts/fractional/src/: lib.rs
contracts/identity/: Cargo.toml  lib.rs
contracts/identity/src/: dashboard.rs
contracts/identity/tests/: identity_tests.rs
contracts/lib/: Cargo.toml  test_output_lib.txt
contracts/lib/src/: audit.rs  lib.rs  tests.rs
contracts/metadata/src/: lib.rs
contracts/oracle/src/: lib.rs
contracts/property-token/src/: errors.rs  lib.rs  tests.rs  types.rs
contracts/proxy/src/: lib.rs
contracts/staking/src/: lib.rs
contracts/traits/src/: access_control.rs  bridge.rs  constants.rs  di.rs  errors.rs  event_bus.rs  lib.rs  observer.rs
indexer/: Cargo.toml  README.md
indexer/src/: api.rs  db.rs  ingest.rs  main.rs
scripts/: archive-events.sh  load_test.sh
sdk/frontend/src/types/: index.ts
security-audit/src/: main.rs
tests/: load_tests.rs  security_bridge_tests.rs
