[package]
name = "propchain-identity"
version = "0.1.0"
authors = ["PropChain Team"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# Local dependencies
propchain-traits = { path = "../traits", default-features = false }

# Cryptographic dependencies
blake2 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.0", default-features = false }
rand_core = { version = "0.6", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain-traits/std",
    "blake2/std",
    "sha2/std",
    "ed25519-dalek/std",
    "rand_core/std",
]
ink-as-dependency = []
